# lemon_image

./: .gitignore  CMakeLists.txt  README.md  algorithm.cc  algorithm.h  catalog_view.cc  catalog_view.h  change_rgb_bands_dialog.cc  change_rgb_bands_dialog.h  file_dialog.cc  file_dialog.h  general_tab.cc  general_tab.h  layer_base.cc  layer_base.h  lemon_image.kdev4  lemon_image.qrc  main.cc  main_window.cc  main_window.h  message_box.cc  message_box.h  metadata.h  metadata_dialog.cc  metadata_dialog.h  metadata_tab.cc  metadata_tab.h  raster.cc  raster.h  raster_layer.cc  raster_layer.h  scene_2d.cc  scene_2d.h  spatial_ref.cc  spatial_ref.h  spatial_reference_tab.cc  spatial_reference_tab.h  utility.cc  utility.h  vector.cc  (+5 more)
